--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,10 @@ services:
       - "5000:5000"
   postgres_db:
     image: "postgres:latest"
-    container_name: "postgres_db"
+    container_name: "postgres_ponto"
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=postgres
+      - POSTGRES_DB=company
     ports:
-      - "5533:5432"
-    volumes:
-      - ./data/postgres:/var/lib/postgresql/data
+      - "5432:5432"
